--- a/index.html
+++ b/index.html
@@ -20,5 +20,20 @@
       To begin the development, run `npm start` in this folder.
       To create a production bundle, use `npm run build`.
     -->
+
+
+    <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyDHYzUnup62Rfr5TVSelo2WTIcaZkaWRaw",
+        authDomain: "wat-client.firebaseapp.com",
+        databaseURL: "https://wat-client.firebaseio.com",
+        storageBucket: "",
+      };
+      firebase.initializeApp(config);
+    </script>
+        
+
   </body>
 </html>
